fix(gitlab-ci): more docker settings tweaking, copy from cca.edu

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,25 @@ variables:
   POSTGRES_DB: $CI_ENVIRONMENT_SLUG
   POSTGRES_VERSION: 9.6.2
   KUBERNETES_VERSION: 1.16.15
-  DOCKER_DRIVER: overlay2
-  DOCKER_HOST: tcp://localhost:2375
+  # Docker-in-Docker (DIND)
+  # When using dind service, you must instruct Docker to talk with
+  # the daemon started inside of the service. The daemon is available
+  # with a network connection instead of the default
+  # /var/run/docker.sock socket.
+  #
+  # The 'docker' hostname is the alias of the service container as described at
+  # https://docs.gitlab.com/ee/ci/services/#accessing-the-services.
+  DOCKER_HOST: tcp://docker:2376
+  # Specify to Docker where to create the certificates. Docker
+  # creates them automatically on boot, and creates
+  # `/certs/client` to share between the service and job
+  # container, thanks to volume mount from config.toml
+  DOCKER_TLS_CERTDIR: "/certs"
+  # These are usually specified by the entrypoint, however the
+  # Kubernetes executor doesn't run entrypoints
+  # https://gitlab.com/gitlab-org/gitlab-runner/-/issues/4125
+  DOCKER_TLS_VERIFY: 1
+  DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
   ROLLOUT_RESOURCE_TYPE: deployment
   BROKEN_LINKS_URL: 'https://docs.google.com/forms/d/16CqNzTnkLot289CqWcUVZf99KdxFaGp2Patu0Vri2Ok/formResponse'
   INSTAGRAM_APP_ID: '123987123987456'
@@ -19,7 +36,7 @@ variables:
   ES_INDEX_PREFIX: ${KUBERNETES_NAMESPACE_OVERWRITE}
 
 services:
-  - docker:25-dind
+  - docker:dind
 
 stages:
   - build
@@ -38,7 +55,7 @@ docker_image_staging:
   variables:
     DOCKER_IMAGE_TAG: "us.gcr.io/cca-web-staging/libraries"
   services:
-    - docker:25-dind
+    - docker:dind
   script:
     - apk add -q py-pip make
     - docker pull -q ${DOCKER_IMAGE_TAG} || true
@@ -60,7 +77,7 @@ docker_image_prod:
   variables:
     DOCKER_IMAGE_TAG: "us.gcr.io/cca-web-0/libraries"
   services:
-    - docker:25-dind
+    - docker:dind
   script:
     - apk add -q py-pip make
     - docker pull -q ${DOCKER_IMAGE_TAG} || true
