--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "sass-lint": "^1.13.1"
   },
   "engines": {
-    "node": "<15"
+    "node": "~20"
   },
   "sasslintConfig": ".sass-lint.yml",
   "eslintConfig": {
