--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ django-extensions = "==3.2.3"
 django-storages = {version = "==1.13.2", extras = ["google"]}
 djangorestframework-simplejwt = "==5.2.2"
 elasticsearch = "==7.17.9"
+google-cloud-secret-manager = "2.18.1"
 l18n = "==2021.3"
 psycopg2 = "==2.9.9"
 pysftp = "==0.2.9"
