ci: clean up local env vars especially for postgres
simply use postgres as the admin user and define it consistently everywhere
then we don't need to be so fancy with the db sync script
removed some unused MEDIA env vars from local configMap
move local DATABASE_URL from deployment to configMap

--- a/kubernetes/local/postgres/configMap.yaml
+++ b/kubernetes/local/postgres/configMap.yaml
@@ -5,9 +5,9 @@ metadata:
   labels:
     app: postgres
 data:
-  PGDATABASE: cca_libraries
-  PGUSER: postgresadmin
-  PGPASSWORD: admin123
+  POSTGRES_DB: cca_libraries
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: admin123
 
 ---
 apiVersion: v1
