--- a/kubernetes/local/configMap.yml
+++ b/kubernetes/local/configMap.yml
@@ -6,29 +6,21 @@ metadata:
   labels:
     app: libraries
 data:
-  # Generic
   CAS_SERVER_URL: https://sso-stage.cca.edu/cas/login
 
-  # Elasticsearch
   ES_URL: http://elasticsearch.libraries-wagtail:9200
   ES_INDEX_PREFIX: libraries_wagtail
 
   # Static files stored in Google Cloud
-  # also requires GS_CREDENTIALS in secrets.env file
+  # also requires GS_CREDENTIALS in deployment env
   GS_BUCKET_NAME: libraries-media-local
-
-  # Media
-  MEDIA_URL: /media/
-  MEDIA_ROOT: /app/media/
 
   # local namespace
   LOCAL_NAMESPACE: libraries-wagtail
 
   # Postgres
+  DATABASE_URL: postgres://postgres:admin123@postgres.libraries-wagtail:5432/cca_libraries
   PGHOST: postgres.libraries-wagtail
-  PGUSER: postgresadmin
+  PGUSER: postgres
   PGDATABASE: cca_libraries
   PGPASSWORD: admin123
-
-  # misc
-  IS_LOCAL: "true"
