--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,6 @@ docker_image_staging:
   variables:
     DOCKER_IMAGE: us.gcr.io/cca-web-staging/libraries
     DOCKER_IMAGE_TAG: "${DOCKER_IMAGE}:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}"
-    DOCKER_LATEST_TAG: latest
   services:
     - docker:dind
   script:
@@ -59,8 +58,9 @@ docker_image_staging:
     - echo "${SA_SERVICE_ACCOUNT_KEY}" > key.json
     - docker login -u _json_key --password-stdin https://us.gcr.io < key.json
     # we need a consistent tag like "latest" or this docker pull fails & we lose our build cache
-    - docker pull --quiet "${DOCKER_IMAGE}:${DOCKER_LATEST_TAG}" || true
-    - docker build --build-arg BUILDKIT_INLINE_CACHE=1 --cache-from "${DOCKER_IMAGE}:${DOCKER_LATEST_TAG}" -t "${DOCKER_IMAGE_TAG}" -t "${DOCKER_LATEST_TAG}" .
+    - docker pull --quiet "${DOCKER_IMAGE}:latest" || true
+    - docker build --build-arg BUILDKIT_INLINE_CACHE=1 --cache-from "${DOCKER_IMAGE}:latest" -t "${DOCKER_IMAGE_TAG}" .
+    - docker tag "${DOCKER_IMAGE_TAG}" "${DOCKER_IMAGE}:latest"
     - docker push --all-tags "${DOCKER_IMAGE}"
 
 # Build & Push Docker image to Google Artifact Registry prod
