--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,15 +75,15 @@ docker_image_prod:
     - if: "$CI_COMMIT_REF_NAME =~ /^release-*/"
       when: always
   variables:
-    DOCKER_IMAGE: "us.gcr.io/cca-web-0/libraries"
+    DOCKER_IMAGE: "us-west2-docker.pkg.dev/cca-web-0/docker-web/libraries"
     DOCKER_IMAGE_TAG: "${DOCKER_IMAGE}:${CI_COMMIT_REF_NAME}-${CI_COMMIT_SHORT_SHA}"
   services:
     - docker:dind
   script:
     - apk add -q py-pip make
     - echo "${SA_SERVICE_ACCOUNT_PROD_KEY}" > key.json
-    - docker login -u _json_key --password-stdin https://us.gcr.io < key.json
-    - docker pull -q "${DOCKER_IMAGE_TAG}:latest" || true
+    - docker login -u _json_key --password-stdin https://us-west2-docker.pkg.dev < key.json
+    - docker pull --quiet "${DOCKER_IMAGE}:latest" || true
     # must build with --build-arg BUILDKIT_INLINE_CACHE=1 or image doesn't work with --cache-form
     - docker build --build-arg BUILDKIT_INLINE_CACHE=1 --cache-from "${DOCKER_IMAGE}:latest" -t "${DOCKER_IMAGE_TAG}" .
     - docker tag "${DOCKER_IMAGE_TAG}" "${DOCKER_IMAGE}:latest"
