ci: use vars for and update images in gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,13 +2,19 @@
 image: docker:25-alpine
 
 variables:
+  # Try to keep these current to receive performance and security improvements
+  CLOUD_SDK_IMAGE: google/cloud-sdk:464.0.0-slim
+  DOCKER_IMAGE: 25.0.3-alpine3.19
+
   # KUBE_INGRESS_BASE_DOMAIN is the application deployment.
   # domain and should be set as a variable at the group or project level.
   KUBE_INGRESS_BASE_DOMAIN: stg.cca.edu
+  # ! not clear to me what these are doing -EP
   POSTGRES_ENABLED: "true"
   POSTGRES_DB: $CI_ENVIRONMENT_SLUG
   POSTGRES_VERSION: 9.6.2
   KUBERNETES_VERSION: 1.16.15
+
   # Docker-in-Docker (DIND)
   # When using dind service, you must instruct Docker to talk with
   # the daemon started inside of the service. The daemon is available
@@ -40,7 +46,7 @@ stages:
 
 # Build & Push Docker image to Google Artifact Registry staging
 docker_image_staging:
-  image: "docker:25"
+  image: $DOCKER_IMAGE
   stage: build
   tags:
   - build
@@ -66,7 +72,7 @@ docker_image_staging:
 
 # Build & Push Docker image to Google Artifact Registry prod
 docker_image_prod:
-  image: "docker:25"
+  image: $DOCKER_IMAGE
   stage: build
   tags:
   - build
@@ -146,7 +152,7 @@ docker_image_prod:
 # ! not necessary, skipped for now, edit "rules" to reactivate
 # tag example: "ep-full-0.23" or "mg-full-0.0.1".
 synchronize_stage:
-  image: "google/cloud-sdk:360.0.0"
+  image: $CLOUD_SDK_IMAGE
   stage: synchronize
   tags:
   - staging
@@ -164,7 +170,7 @@ synchronize_stage:
 
 # tag example: "ep-full-0.23" or "mg-full-0.0.1".
 deploy_full_stage:
-  image: "google/cloud-sdk:360.0.0"
+  image: $CLOUD_SDK_IMAGE
   stage: deploy
   tags:
   - staging
@@ -183,7 +189,7 @@ deploy_full_stage:
 # Only difference is not provisioning secrets?
 # tag example: mg-fast-0.0.1.
 deploy_fast_stage:
-  image: "google/cloud-sdk:360.0.0"
+  image: $CLOUD_SDK_IMAGE
   stage: deploy
   tags:
   - staging
@@ -227,7 +233,7 @@ deploy_fast_stage:
 
 # tag example: release-${VERSION}
 deploy_release:
-  image: "google/cloud-sdk:352.0.0"
+  image: $CLOUD_SDK_IMAGE
   stage: deploy
   tags:
   - production
