ci: another attempt at image vars in gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,10 @@
 ---
-image: docker:25-alpine
+image: docker:25.0.3-alpine3.19
 
 variables:
-  # ! Gitlab says you can use variables in image properties but they do not work
-  # https://docs.gitlab.com/ee/ci/yaml/index.html#image
   # Try to keep these current to receive performance and security improvements
-  # CLOUD_SDK_IMAGE: google/cloud-sdk:464.0.0-slim
-  # DOCKER_IMAGE: 25.0.3-alpine3.19
+  CLOUD_SDK_IMAGE: google/cloud-sdk:464.0.0-slim
+  DOCKER_IMAGE: docker:25.0.3-alpine3.19
 
   # KUBE_INGRESS_BASE_DOMAIN is the application deployment.
   # domain and should be set as a variable at the group or project level.
@@ -48,7 +46,7 @@ stages:
 
 # Build & Push Docker image to Google Artifact Registry staging
 docker_image_staging:
-  image: 25.0.3-alpine3.19
+  image: $DOCKER_IMAGE
   stage: build
   tags:
   - build
@@ -73,7 +71,7 @@ docker_image_staging:
 
 # Build & Push Docker image to Google Artifact Registry prod
 docker_image_prod:
-  image: 25.0.3-alpine3.19
+  image: $DOCKER_IMAGE
   stage: build
   tags:
   - build
@@ -152,7 +150,7 @@ docker_image_prod:
 # ! not necessary, skipped for now, edit "rules" to reactivate
 # tag example: "ep-full-0.23" or "mg-full-0.0.1".
 synchronize_stage:
-  image: google/cloud-sdk:464.0.0-slim
+  image: $CLOUD_SDK_IMAGE
   stage: synchronize
   tags:
   - staging
@@ -189,7 +187,7 @@ deploy_full_stage:
 # Only difference is not provisioning secrets?
 # tag example: mg-fast-0.0.1.
 deploy_fast_stage:
-  image: google/cloud-sdk:464.0.0-slim
+  image: $CLOUD_SDK_IMAGE
   stage: deploy
   tags:
   - staging
@@ -233,7 +231,7 @@ deploy_fast_stage:
 
 # tag example: release-${VERSION}
 deploy_release:
-  image: google/cloud-sdk:464.0.0-slim
+  image: $CLOUD_SDK_IMAGE
   stage: deploy
   tags:
   - production
